fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -8,20 +8,6 @@ body {
     padding:.6rem 1rem;
 }
 
-.welcome-text{
-    position: absolute;
-    top:50%;
-    right:10%;
-    z-index: 2;
-}
-.welcome-image {
-    position: relative;
-    z-index: 1;
-    max-width: 100%;
-    object-fit: cover;
-    width: 100%;
-    max-height: 50%;
-}
 
 .headshot-marissa {
     max-width: 90%;
